@@ -618,8 +618,7 @@ int igraph_read_graph_ncol(igraph_t *graph, FILE *instream,
 			  igraph_bool_t weights, igraph_bool_t directed);
 int igraph_read_graph_lgl(igraph_t *graph, FILE *instream,
 			  igraph_bool_t names, igraph_bool_t weights);
-int igraph_read_graph_pajek(igraph_t *graph, FILE *instream, 
-			    igraph_bool_t attr);
+int igraph_read_graph_pajek(igraph_t *graph, FILE *instream);
 int igraph_read_graph_graphml(igraph_t *graph, FILE *instream,
 			      igraph_bool_t directed, int index);
 
