@@ -1,3 +1,7 @@
+2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c : updated, 'attr' attribute removed.
+
 2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c : updated to new delete_edges 
